--- a/Pattern generation.ipynb
+++ b/Pattern generation.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "kernel": "Python3"
    },
@@ -180,6 +180,7 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
+    "import cv2 as cv\n",
     "\n",
     "%matplotlib widget\n",
     "\n",
@@ -307,6 +308,83 @@
    ],
    "source": [
     "dataset = load_sim_dataset('DNN4SIM_data/data/raw', channels='3D-SIM 488')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2038b62ccef7436789e38481ec56d654",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4120cdfbb18e4afab014b3879011327a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<iplabs.IPLabViewer at 0x1b4c138ee88>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 11\n",
+    "plt.close('all')\n",
+    "img_fft = 10 * np.log10(np.abs(np.fft.fftshift(np.fft.fft2(dataset[n]))))\n",
+    "img = dataset[n]\n",
+    "viewer([img, img_fft], subplots=(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.imwrite(f'img_{n}.png', img/np.max(img)*255)\n",
+    "cv.imwrite(f'img_{n}_fft.png', img_fft/np.max(img_fft)*255)"
    ]
   },
   {
@@ -553,7 +631,6 @@
     "            %     acqWF=poissrnd(round(acqWFNoNoise/sum(acqWFNoNoise(:))*photBud(ii)*prod(sz)));\n",
     "            SNR=20*log10(norm(acqNoNoise(:))/norm(acq(:)-acqNoNoise(:)));\n",
     "            disp(['SNR = ',num2str(SNR),' dB']);\n",
-    "\n",
     "            % - Save\n",
     "            if sav\n",
     "                expFolder_ = [expFolder '_' ch '_' num2str(img_count)];\n",
@@ -618,7 +695,7 @@
     ]
    ],
    "panel": {
-    "displayed": false,
+    "displayed": true,
     "height": 0
    },
    "version": "0.21.9"
