--- a/DNN_test.ipynb
+++ b/DNN_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,11 @@
     "import cv2 as cv\n",
     "import json\n",
     "import sys \n",
+    "from skimage import exposure\n",
     "\n",
     "sys.path.insert(0, 'source')\n",
     "from nn import *\n",
+    "from laploss import *\n",
     "\n",
     "%matplotlib widget\n",
     "\n",
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,24 +604,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "loss_id = 'custom_new_4'\n",
     "history = None\n",
-    "with open('train_out/train_history_custom_loss.json') as f:\n",
+    "with open(f'DNN4SIM_data/train_out/train_history_{loss_id}.json') as f:\n",
     "  history = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cf216fb82b1456a9492c6a9fcd838cd",
+       "model_id": "6f0fe9e7846a4fc9bcd477c79b58bb64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -655,25 +658,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = np.load('DNN4SIM_data/features.npy')\n",
-    "labels = np.load('DNN4SIM_data/labels.npy')\n",
-    "wf = np.load('DNN4SIM_data/wf.npy')"
+    "features = np.load('DNN4SIM_data/data_reduced/features_1.npy')\n",
+    "labels = np.load('DNN4SIM_data/data_reduced/labels_1.npy')\n",
+    "wfs = np.load('DNN4SIM_data/data_reduced/wf_1.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = features[:features.shape[0]//3]\n",
+    "labels = labels[:labels.shape[0]//3]\n",
+    "wfs = wfs[:wfs.shape[0]//3]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load trained model"
+    "### Test img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d249e1905b674294a6b1b76a18f3762b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rosette_512 = np.load('DNN4SIM_data/rosette_512.npy')\n",
+    "rosette_1024 = np.load('DNN4SIM_data/rosette_1024.npy')\n",
+    "def apply_rosette(img, rosette):\n",
+    "    FT = np.fft.fftshift(np.fft.fft2(img))\n",
+    "    FT[rosette == 0] = 1e-5\n",
+    "    return np.real(np.fft.ifft2(np.fft.ifftshift(FT)))\n",
+    "\n",
+    "def apply_fft(img):\n",
+    "    FT = np.abs(np.fft.fftshift(np.fft.fft2(img)))\n",
+    "    FT[FT == 0] = 1e-5\n",
+    "    return 10*np.log10(FT)\n",
+    "\n",
+    "def process_img(img):\n",
+    "    img = (img - np.min(img)) / (np.max(img) - np.min(img))\n",
+    "    return exposure.equalize_adapthist(img, clip_limit=0.1)\n",
+    "\n",
+    "def snr(img):\n",
+    "    m = np.mean(img)\n",
+    "    sd = np.std(img)\n",
+    "    return np.where(sd == 0, 0, m/sd)\n",
+    "\n",
+    "test_img = 'sim_test_img_2'\n",
+    "\n",
+    "test_feature = cv.imread(f'DNN4SIM_data/{test_img}_recons.png', cv.IMREAD_GRAYSCALE)\n",
+    "test_wf = cv.imread(f'DNN4SIM_data/{test_img}_wf.png', cv.IMREAD_GRAYSCALE)\n",
+    "test_label = apply_rosette(cv.imread(f'DNN4SIM_data/{test_img}.png', cv.IMREAD_GRAYSCALE), rosette_1024)\n",
+    "\n",
+    "#test_feature = process_img(test_feature)\n",
+    "#test_wf = process_img(test_wf)\n",
+    "#test_label = process_img(test_label)\n",
+    "\n",
+    "label_FT = apply_fft(test_label); feature_FT = apply_fft(test_feature); test_label_FT = apply_fft(test_label)\n",
+    "img_list = [test_feature, test_label, feature_FT, test_label_FT]\n",
+    "\n",
+    "plt.close('all')\n",
+    "view = viewer(img_list, subplots=(2,2), cmap='viridis', joint_zoom=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -748,51 +835,36 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "loss_id = 'custom_new_4'\n",
     "model = CUNet()\n",
-    "model.load_state_dict(torch.load('train_out/trained_model_custom_loss_2.pt', map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load(f'DNN4SIM_data/train_out/trained_model_{loss_id}.pt', map_location=torch.device('cpu')))\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_fft(img):\n",
-    "    FT = np.abs(np.fft.fftshift(np.fft.fft2(img)))\n",
-    "    FT[FT == 0] = 1e-5\n",
-    "    return 10*np.log10(FT)"
+    "net_output = np.squeeze(model(torch.FloatTensor(test_feature).unsqueeze(dim=0).unsqueeze(dim=0)).detach().numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 253 # 253\n",
-    "feature = features[n]\n",
-    "label = labels[n]\n",
-    "\n",
-    "net_output = np.squeeze(model(torch.FloatTensor(feature).unsqueeze(dim=0).unsqueeze(dim=0)).detach().numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76878b6ed9ac470eb2a5feecdaf29d6c",
+       "model_id": "82edb0c401774643ab00494d8bdb1953",
        "version_major": 2,
        "version_minor": 0
       },
@@ -806,7 +878,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1139ea0a353e4656ae168637bb812c4c",
+       "model_id": "a72ddaeca16d461ea7e5eea2de99c6eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -816,26 +888,253 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "#img_list = [test_feature[570:770, 510:710], test_label[570:770, 510:710], net_output[570:770, 510:710], test_wf[570:770, 510:710]]\n",
+    "#img_list = [test_feature[580:640, 650:710], test_label[580:640, 650:710], net_output[580:640, 650:710], test_wf[580:640, 650:710]]\n",
+    "\n",
+    "img_list = [test_feature, test_label, net_output, test_wf]\n",
+    "\n",
+    "title_list = ['Reconstruction', 'Ground-Truth', 'Net Output', 'Widefield']\n",
+    "plt.close('all')\n",
+    "view = viewer(img_list, title=title_list, subplots=(2,2), cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "<iplabs.IPLabViewer at 0x2b3a9772408>"
+       "CUNet(\n",
+       "  (down1): Sequential(\n",
+       "    (0): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU()\n",
+       "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU()\n",
+       "  )\n",
+       "  (down2): Sequential(\n",
+       "    (0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (1): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): ReLU()\n",
+       "  )\n",
+       "  (down3): Sequential(\n",
+       "    (0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (1): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): ReLU()\n",
+       "  )\n",
+       "  (down4): Sequential(\n",
+       "    (0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (1): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): ReLU()\n",
+       "  )\n",
+       "  (downF): Sequential(\n",
+       "    (0): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (1): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (2): ReLU()\n",
+       "    (3): Conv2d(1024, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): ReLU()\n",
+       "    (5): ConvTranspose2d(1024, 512, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  )\n",
+       "  (up1): Sequential(\n",
+       "    (0): Conv2d(1024, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU()\n",
+       "    (2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU()\n",
+       "    (4): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  )\n",
+       "  (up2): Sequential(\n",
+       "    (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU()\n",
+       "    (2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU()\n",
+       "    (4): ConvTranspose2d(256, 128, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  )\n",
+       "  (up3): Sequential(\n",
+       "    (0): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU()\n",
+       "    (2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU()\n",
+       "    (4): ConvTranspose2d(128, 64, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  )\n",
+       "  (up4): Sequential(\n",
+       "    (0): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU()\n",
+       "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU()\n",
+       "  )\n",
+       "  (upF): Sequential(\n",
+       "    (0): Conv2d(64, 1, kernel_size=(1, 1), stride=(1, 1))\n",
+       "  )\n",
+       ")"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#label_FT = apply_fft(label)\n",
-    "#feature_FT = apply_fft(feature)\n",
-    "#net_output_FT = apply_fft(net_output)\n",
-    "img_list = [feature, label, net_output, feature_FT, label_FT, net_output_FT]\n",
-    "img_list = [feature, label, net_output, ]\n",
+    "loss_id = 'custom_new_4'\n",
+    "model = CUNet()\n",
+    "model.load_state_dict(torch.load(f'DNN4SIM_data/train_out/trained_model_{loss_id}.pt', map_location=torch.device('cpu')))\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_fft(img):\n",
+    "    FT = np.abs(np.fft.fftshift(np.fft.fft2(img)))\n",
+    "    FT[FT == 0] = 1e-5\n",
+    "    return 10*np.log10(FT)\n",
+    "def process_img(img):\n",
+    "    return exposure.equalize_adapthist(normalize(img), clip_limit=0.1)\n",
+    "def normalize(img):\n",
+    "    return (img - np.min(img)) / (np.max(img) - np.min(img))\n",
+    "def snr(img):\n",
+    "    m = np.mean(img)\n",
+    "    sd = np.std(img)\n",
+    "    return 10*np.log10(m/sd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 253\n",
+    "feature = features[n]\n",
+    "label = labels[n]\n",
+    "wf = wfs[n]\n",
+    "\n",
+    "net_output = process_img(np.squeeze(model(torch.FloatTensor(feature).unsqueeze(dim=0).unsqueeze(dim=0)).detach().numpy()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SSIM:\tReconstruction: 0.4578\n",
+      "\tNet output: \t0.7467\n",
+      "\tWidefield: \t0.4679\n",
+      "SNR:\tReconstruction: 1.7830\n",
+      "\tNet output: \t1.7630\n",
+      "\tWidefield: \t1.7906\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a6a1950346445efb2e1dd2c8a528adb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# With FT\n",
+    "\n",
+    "#label_FT = apply_fft(label); feature_FT = apply_fft(feature); net_output_FT = apply_fft(net_output)\n",
+    "#img_list = [feature, net_output, feature_FT, net_output_FT]\n",
+    "\n",
+    "# For img 253\n",
+    "#feature = feature[770:1024, 575:829]; label = label[770:1024, 575:829]; wf = wf[770:1024, 575:829]; net_output = net_output[770:1024, 575:829]\n",
+    "\n",
+    "# Without wf / without FT\n",
+    "img_list = [feature, label, net_output, wf]\n",
+    "\n",
+    "# Stats\n",
+    "print(f'SSIM:\\tReconstruction: {ssim(feature, label):.4f}\\n\\tNet output: \\t{ssim(net_output, label):.4f}\\n\\tWidefield: \\t{ssim(wf, label):.4f}')\n",
+    "print(f'SNR:\\tReconstruction: {snr(feature):.4f}\\n\\tNet output: \\t{snr(net_output):.4f}\\n\\tWidefield: \\t{snr(wf):.4f}')\n",
+    "\n",
     "plt.close('all')\n",
-    "viewer(, subplots=(2,3))"
+    "view = viewer(img_list, subplots=(2,2), cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Showcase Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Widefield image is not in [0,1]\n",
+    "wf = wf-np.min(wf)\n",
+    "# Colorize images\n",
+    "feature_colorized = cv.applyColorMap((feature*255).astype(np.uint8), cv.COLORMAP_VIRIDIS)\n",
+    "wf_colorized = cv.applyColorMap((wf*255).astype(np.uint8), cv.COLORMAP_VIRIDIS)\n",
+    "label_colorized = cv.applyColorMap((label*255).astype(np.uint8), cv.COLORMAP_VIRIDIS)\n",
+    "net_output_colorized = cv.applyColorMap((net_output*255).astype(np.uint8), cv.COLORMAP_VIRIDIS)\n",
+    "\n",
+    "loss_id = 'L1'\n",
+    "# Save images\n",
+    "cv.imwrite(f'showcase/feature_{loss_id}.png', feature_colorized)\n",
+    "cv.imwrite(f'showcase/wf_{loss_id}.png', wf_colorized)\n",
+    "cv.imwrite(f'showcase/label_{loss_id}.png', label_colorized)\n",
+    "cv.imwrite(f'showcase/net_output_{loss_id}.png', net_output_colorized)"
    ]
   },
   {
@@ -922,11 +1221,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MS-SSIM test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def custom_loss(output, target):\n",
+    "    ssim_loss = MS_SSIM(data_range=1.0, size_average=True, channel=1)\n",
+    "    sl1l = F.smooth_l1_loss\n",
+    "    return 0.16 * sl1l(output, target) + 0.84 * (1 - ssim_loss(output, target))\n",
+    "\n",
+    "def accuracy(outputs, labels):\n",
+    "    return ssim(outputs, labels, data_range=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5339216589927673\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5550482273101807"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pytorch_msssim import ssim, ms_ssim, SSIM, MS_SSIM\n",
+    "X = torch.FloatTensor(wf).unsqueeze(dim=0).unsqueeze(dim=0)\n",
+    "Y = torch.FloatTensor(label).unsqueeze(dim=0).unsqueeze(dim=0)\n",
+    "\n",
+    "print(accuracy(X, Y).item())\n",
+    "ssim_acc = pytorch_ssim.SSIM()\n",
+    "ssim_acc(X, Y).item()"
+   ]
   }
  ],
  "metadata": {
