--- a/Explore_DIV2K.ipynb
+++ b/Explore_DIV2K.ipynb
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2 as cv\n",
     "import scipy.io as sio\n",
+    "from skimage import exposure\n",
     "\n",
     "%matplotlib widget\n",
     "\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "kernel": "Python3"
    },
@@ -51,7 +52,7 @@
     "    for i, f in enumerate(subdir_list):\n",
     "        img = cv.imread(str(f), cv.IMREAD_GRAYSCALE)\n",
     "        sz = min(img.shape)//2\n",
-    "        img = cv.resize(img[img.shape[0]//2 - sz:img.shape[0]//2 + sz, img.shape[1]//2 - sz:img.shape[1]//2 + sz], (1024, 1024))\n",
+    "        img = cv.resize(img[img.shape[0]//2 - sz:img.shape[0]//2 + sz, img.shape[1]//2 - sz:img.shape[1]//2 + sz], (512, 512))\n",
     "        img = img / np.max(img)\n",
     "        ls.append(img)\n",
     "        print(f'Collecting images... {i/len(subdir_list)*100:3.0f}%', end='\\r')\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "kernel": "Python3"
    },
@@ -86,19 +87,135 @@
     "kernel": "Python3"
    },
    "source": [
+    "### Test img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img = cv.imread('DNN4SIM_data/sim_test_img_2.jpg', cv.IMREAD_GRAYSCALE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img_up = cv.resize(img, dsize=(1024,1024), interpolation=cv.INTER_LANCZOS4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img_up = img_up/np.max(img_up)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img_up = exposure.equalize_adapthist(img_up, clip_limit=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36df8142617e43bf901f3180da829cb3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cf21314b49df41fa872c40faed783174",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.close('all')\n",
+    "view = viewer([img, img_up], subplots=(1,2), cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.imwrite('DNN4SIM_data/sim_test_img_2.png', img_up*255)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
     "# Save dataset as .mat file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {
     "kernel": "Python3"
    },
    "outputs": [],
    "source": [
     "for i in range(4):\n",
-    "    with open(f'DNN4SIM_data/DIV2K_{i}.mat', 'wb') as f:\n",
+    "    with open(f'DNN4SIM_data/DIV2K_512_{i}.mat', 'wb') as f:\n",
     "        sio.savemat(f, {'data' : dataset[i*dataset.shape[0]//4:(i+1)*dataset.shape[0]//4]})"
    ]
   },
@@ -113,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "kernel": "Python3"
    },
@@ -186,7 +303,55 @@
     "kernel": "Python3"
    },
    "source": [
-    "# Generate NumPy dataset from reconstruction .mat files"
+    "# Histogram equalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "feats = np.load('DNN4SIM_data/features.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(feats.shape[0]):\n",
+    "    feats[i] = exposure.equalize_adapthist(feats[i], clip_limit=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "with open('DNN4SIM_data/data_reduced/features_1.npy', 'wb') as f:\n",
+    "    np.save(f, feats[:feats.shape[0]//2])\n",
+    "with open('DNN4SIM_data/data_reduced/features_2.npy', 'wb') as f:\n",
+    "    np.save(f, feats[feats.shape[0]//2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "labs = np.load('DNN4SIM_data/labels.npy')"
    ]
   },
   {
@@ -197,6 +362,107 @@
    },
    "outputs": [],
    "source": [
+    "for i in range(labs.shape[0]):\n",
+    "    labs[i] = exposure.equalize_adapthist(labs[i], clip_limit=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "with open('DNN4SIM_data/data_reduced/labels_1.npy', 'wb') as f:\n",
+    "    np.save(f, labs[:labs.shape[0]//2])\n",
+    "with open('DNN4SIM_data/data_reduced/labels_2.npy', 'wb') as f:\n",
+    "    np.save(f, labs[labs.shape[0]//2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "wf = np.load('DNN4SIM_data/wf.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(wf.shape[0]):\n",
+    "    wf[i] = exposure.equalize_adapthist((wf[i] - np.min(wf[i])) / (np.max(wf[i]) - np.min(wf[i])), clip_limit=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "with open('DNN4SIM_data/data_reduced/wf_1.npy', 'wb') as f:\n",
+    "    np.save(f, wf[:wf.shape[0]//2])\n",
+    "with open('DNN4SIM_data/data_reduced/wf_2.npy', 'wb') as f:\n",
+    "    np.save(f, wf[wf.shape[0]//2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "962cc199abd94d37b149cbd09fbc7a46",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.close('all')\n",
+    "view = viewer([wf[253]], hist=True, cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "# Generate NumPy dataset from reconstruction .mat files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "rosette_1024 = np.load('DNN4SIM_data/rosette_1024.npy')\n",
+    "rosette_512 = np.load('DNN4SIM_data/rosette_512.npy')\n",
     "def apply_rosette(img, rosette):\n",
     "    FT = np.fft.fftshift(np.fft.fft2(img))\n",
     "    FT[rosette == 0] = 1e-5\n",
@@ -205,59 +471,38 @@
     "def apply_fft(img):\n",
     "    FT = np.abs(np.fft.fftshift(np.fft.fft2(img)))\n",
     "    FT[FT == 0] = 1e-5\n",
-    "    return 10*np.log10(FT)"
+    "    return 10*np.log10(FT)\n",
+    "\n",
+    "def process_img(img):\n",
+    "    return (img - np.mean(img)) / np.std(img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "kernel": "Python3"
    },
    "outputs": [],
    "source": [
-    "#ds_recons = []\n",
-    "#ds = []\n",
+    "ds_recons = []\n",
+    "ds = []\n",
     "ds_wf = []\n",
-    "for i in range(4):\n",
-    "    #ds_recons.append(sio.loadmat(f'DNN4SIM_data/DIV2K_recons_{i}.mat')['recons_data'])\n",
-    "    #ds.append(sio.loadmat(f'DNN4SIM_data/DIV2K_{i}.mat')['data'])\n",
-    "    ds_wf.append(sio.loadmat(f'DNN4SIM_data/DIV2K_wf_{i}.mat')['wf_data'])\n",
     "\n",
-    "#ds_recons = np.concatenate(ds_recons, axis=0)\n",
-    "#ds = np.concatenate(ds, axis=0)\n",
+    "snr = 20\n",
+    "for i in range(4):\n",
+    "    ds_recons.append(sio.loadmat(f'DNN4SIM_data/DIV2K_recons_snr{snr}_{i}.mat')['recons_data'])\n",
+    "    ds.append(sio.loadmat(f'DNN4SIM_data/DIV2K_{i}.mat')['data'])\n",
+    "    ds_wf.append(sio.loadmat(f'DNN4SIM_data/DIV2K_wf_snr{snr}_{i}.mat')['wf_data'])\n",
+    "\n",
+    "ds_recons = np.concatenate(ds_recons, axis=0)\n",
+    "ds = np.concatenate(ds, axis=0)\n",
     "ds_wf = np.concatenate(ds_wf, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": [
-    "for i, x in enumerate(ds_recons):\n",
-    "    ds_recons[i] = (x - np.min(x)) / (np.max(x) - np.min(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": [
-    "rosette_1024 = np.load('DNN4SIM_data/rosette_1024.npy')\n",
-    "for i, x in enumerate(ds):\n",
-    "    x = apply_rosette(x, rosette_1024)\n",
-    "    ds[i] = (x - np.min(x)) / (np.max(x) - np.min(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "kernel": "Python3"
    },
@@ -265,7 +510,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f320ad505f401697b4d39a5a9b4aa3",
+       "model_id": "758c36e9985e4953847fece88d8d53f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,7 +524,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a79071ea1da457db339cfbf89a12c87",
+       "model_id": "1c98302ae2e241509626f5439bbde73c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +537,21 @@
     }
    ],
    "source": [
-    "view = viewer([ds[234], apply_fft(ds[234])], subplots=(2,1))"
+    "view = viewer([ds[253], ds_recons[253], ds_wf[253]], subplots=(1,3), title=['Label', 'Feature', 'Widefield'], cmap='viridis', joint_zoom=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(ds.shape[0]):\n",
+    "    ds[i] = process_img(apply_rosette(ds[i], rosette_1024))\n",
+    "    ds_recons[i] = process_img(ds_recons[i])\n",
+    "    ds_wf[i] = process_img(ds_wf[i])"
    ]
   },
   {
@@ -301,15 +560,88 @@
    "metadata": {
     "kernel": "Python3"
    },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d7946f9ef844a09a17ec5dc92b3c558",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d49868d9027444fd8396d31622ef2716",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view = viewer([ds[62], ds_recons[62], ds_wf[62]], subplots=(1,3), title=['Label', 'Feature', 'Widefield'], cmap='viridis', joint_zoom=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "kernel": "Python3"
+   },
    "outputs": [],
    "source": [
-    "#with open('features.npy', 'wb') as f:\n",
-    "#    np.save(f, ds_recons)\n",
-    "#with open('labels.npy', 'wb') as f:\n",
-    "#    np.save(f, ds)\n",
-    "with open('wf.npy', 'wb') as f:\n",
+    "with open(f'DNN4SIM_data/features_snr{snr}.npy', 'wb') as f:\n",
+    "    np.save(f, ds_recons)\n",
+    "with open(f'DNN4SIM_data/labels_snr{snr}.npy', 'wb') as f:\n",
+    "    np.save(f, ds)\n",
+    "with open(f'DNN4SIM_data/wf_snr{snr}.npy', 'wb') as f:\n",
     "    np.save(f, ds_wf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "with open(f'DNN4SIM_data/features_snr{snr}_1.npy', 'wb') as f:\n",
+    "    np.save(f, ds_recons[:ds_recons.shape[0]//2])\n",
+    "with open(f'DNN4SIM_data/features_snr{snr}_2.npy', 'wb') as f:\n",
+    "    np.save(f, ds_recons[ds_recons.shape[0]//2:])\n",
+    "    \n",
+    "with open(f'DNN4SIM_data/labels_snr{snr}_1.npy', 'wb') as f:\n",
+    "    np.save(f, ds[:ds.shape[0]//2])\n",
+    "with open(f'DNN4SIM_data/labels_snr{snr}_2.npy', 'wb') as f:\n",
+    "    np.save(f, ds[ds.shape[0]//2:])\n",
+    "    \n",
+    "with open(f'DNN4SIM_data/wf_snr{snr}_1.npy', 'wb') as f:\n",
+    "    np.save(f, ds_wf[:ds_wf.shape[0]//2])\n",
+    "with open(f'DNN4SIM_data/wf_snr{snr}_2.npy', 'wb') as f:\n",
+    "    np.save(f, ds_wf[ds_wf.shape[0]//2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
